--- a/package.json
+++ b/package.json
@@ -20,7 +20,12 @@
     "scoped-http-client": "0.9.4",
     "irc": "0.2",
     "node-xmpp": ">=0.2.6",
-    "wobot": "0.3.0"
+    "wobot": "0.3.0",
+    "colors": "0.5.1",
+    "mimelib-noiconv": "0.1.3",
+    "nodemailer": "0.1.20",
+    "mailer": "0.6.7",
+    "sprintf": "0.1.1"
   },
 
   "main": "./index",
