--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
       "optparse": "1.0.3",
       "scoped-http-client": "0.9.6",
       "log": "1.2.0",
-      "hubot-scripts": ">= 2.0.3",
-      "wolfram": ">= 0.2.0"
+      "hubot-scripts": ">= 2.0.3"
   },
 
   "main": "./index",
@@ -29,4 +28,3 @@
     "hubot": "./bin/hubot"
   }
 }
-
