--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
       "optparse": "1.0.3",
       "scoped-http-client": "0.9.6",
       "log": "1.2.0",
-      "hubot-scripts": ">= 2.0.3"
+      "hubot-scripts": ">= 2.0.3",
+      "wolfram": ">= 0.2.0"
   },
 
   "main": "./index",
