--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
         "url":  "https://github.com/github/hubot.git"
     },
 
+     "engines": {
+         "node": "0.8.x",
+         "npm":  "1.1.x"
+     },
+
     "dependencies": {
         "coffee-script": "1.3.3",
         "redis": ">= 0.7.1",
