--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
         "log": "1.3.0",
         "connect": "2.3.4",
         "connect_router": "1.8.6",
-        "wolfram": ">= 0.2.0"
+        "wolfram": ">= 0.2.0",
+        "cleverbot-node": ">= 0.1.1",
+        "underscore": ">= 1.4.3",
+        "xml2js": ">= 0.2.2"
     },
 
     "main": "./index",
