--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "wolfram": ">= 0.2.0",
         "cleverbot-node": ">= 0.1.1",
         "underscore": ">= 1.4.3",
+        "underscore.string": ">= 2.3.1",
         "xml2js": ">= 0.2.2"
     },
 
