--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
         "redis": ">= 0.7.1",
         "sprintf": ">= 0.1.1",
         "nodemailer": ">= 0.3.18",
-        "hubot-scripts": ">= 2.0.3",
+        "hubot-scripts": "git://github.com/github/hubot-scripts.git#master",
         "optparse": "1.0.3",
         "scoped-http-client": "0.9.7",
         "log": "1.3.0",
