Adding dependecies for our scripts.

--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "optparse":           "1.0.4",
     "scoped-http-client": "0.9.8",
     "log":                "1.4.0",
-    "express":            "3.3.4"
+    "express":            "3.3.4",
+    "redis": "0.8.4",
+    "sprintf": "0.1.1",
+    "nodemailer": "0.5.2"
   },
 
   "engines": {
