--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "hubot-scripts": "2.5.2",
     "redis": "0.8.4",
     "sprintf": "0.1.1",
-    "nodemailer": "0.5.2"
+    "nodemailer": "0.5.2",
+    "underscore": "1.5.1",
+    "url": "0.7.9"
   },
 
   "engines": {
