--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "sprintf": "0.1.1",
     "nodemailer": "0.5.2",
     "underscore": "1.5.1",
-    "url": "0.7.9"
+    "url": "0.7.9",
+    "wolfram": "0.2.6"
   },
 
   "engines": {
