--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "nodemailer": "0.5.2",
     "underscore": "1.5.1",
     "url": "0.7.9",
-    "wolfram": "0.2.6"
+    "wolfram": "0.2.6",
+	"time": "*",
+	"cron": "*"
   },
 
   "engines": {
