--- a/package.json
+++ b/package.json
@@ -1,34 +1,30 @@
 {
   "name": "hubot",
   "version": "2.6.1",
-
   "author": "hubot",
-
   "keywords": [
     "github",
     "hubot",
     "campfire",
     "bot"
   ],
-
   "description": "A simple helpful robot for your Company",
-
-  "licenses": [{
-    "type": "MIT",
-    "url": "https://github.com/github/hubot/raw/master/LICENSE.md"
-  }],
-
-  "repository" : {
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "https://github.com/github/hubot/raw/master/LICENSE.md"
+    }
+  ],
+  "repository": {
     "type": "git",
     "url": "https://github.com/github/hubot.git"
   },
-
   "dependencies": {
-    "coffee-script":      "1.6.3",
-    "optparse":           "1.0.4",
+    "coffee-script": "1.6.3",
+    "optparse": "1.0.4",
     "scoped-http-client": "0.9.8",
-    "log":                "1.4.0",
-    "express":            "3.3.4",
+    "log": "1.4.0",
+    "express": "3.3.4",
     "hubot-scripts": "2.5.2",
     "redis": "0.8.4",
     "sprintf": "0.1.1",
@@ -36,16 +32,14 @@
     "underscore": "1.5.1",
     "url": "0.7.9",
     "time": "*",
-	  "cron": "*"
+    "cron": "*",
+    "hubot-slack": "~1.5.2"
   },
-
   "engines": {
     "node": ">= 0.8.x",
-    "npm":  ">= 1.1.x"
+    "npm": ">= 1.1.x"
   },
-
   "main": "./index",
-
   "bin": {
     "hubot": "./bin/hubot"
   }
