--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "url": "0.7.9",
     "time": "*",
       "cron": "*",
-      "hubot-kato": "0.0.6"
+      "hubot-kato": "0.0.6",
+      "ntwitter": "0.5.0"
   },
   "engines": {
     "node": ">= 0.8.x",
