--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "time": "*",
       "cron": "*",
       "hubot-kato": "0.0.6",
-      "ntwitter": "0.5.0"
+      "ntwitter": "0.5.0",
+      "htmlparser": "1.7.6",
+      "soupselect": "0.2.0"
   },
   "engines": {
     "node": ">= 0.8.x",
