--- a/package.json
+++ b/package.json
@@ -1,44 +1,48 @@
 {
-  "name": "hubot",
-  "version": "2.7.5",
-  "author": "hubot",
-  "keywords": [
-    "github",
-    "hubot",
-    "campfire",
-    "bot"
-  ],
-  "description": "A simple helpful robot for your Company",
-  "licenses": [{
-    "type": "MIT",
-    "url": "https://raw.github.com/github/hubot/master/LICENSE"
-  }],
+    "name": "hubot",
+    "version": "2.7.5",
+    "author": "hubot",
+    "keywords": [
+        "github",
+        "hubot",
+        "campfire",
+        "bot"
+    ],
+    "description": "A simple helpful robot for your Company",
+    "licenses": [{
+        "type": "MIT",
+        "url": "https://raw.github.com/github/hubot/master/LICENSE"
+    }],
 
-  "repository" : {
-    "type": "git",
-    "url": "https://github.com/github/hubot.git"
-  },
-  "dependencies": {
-    "coffee-script": "1.6.3",
-    "optparse": "1.0.4",
-    "scoped-http-client": "0.9.8",
-    "log": "1.4.0",
-    "express": "3.3.4",
-      "hubot-scripts": ">= 2.5.0 < 3.0.0",
-    "redis": "0.8.4",
-    "sprintf": "0.1.1",
-    "nodemailer": "0.5.2",
-    "underscore": "1.5.1",
-    "url": "0.7.9",
-    "time": "*",
-      "cron": "*"
-  },
-  "engines": {
-    "node": ">= 0.8.x",
-    "npm": ">= 1.1.x"
-  },
-  "main": "./index",
-  "bin": {
-    "hubot": "./bin/hubot"
-  }
+    "repository" : {
+        "type": "git",
+        "url": "https://github.com/github/hubot.git"
+    },
+    "dependencies": {
+        "coffee-script": "1.6.3",
+        "optparse": "1.0.4",
+        "scoped-http-client": "0.9.8",
+        "log": "1.4.0",
+        "express": "3.3.4",
+        "hubot-scripts": ">= 2.5.0 < 3.0.0",
+        "redis": "0.8.4",
+        "sprintf": "0.1.1",
+        "nodemailer": "0.5.2",
+        "underscore": "1.5.1",
+        "url": "0.7.9",
+        "time": "*",
+        "cron": "*",
+        "hubot-plusplus": "1.0.x",
+        "hubot-worldcup": ">= 0.0.0",
+        "hubot-soon": ">= 0.0.0",
+        "hubot-business-cat": "1.0.x"
+    },
+    "engines": {
+        "node": ">= 0.8.x",
+        "npm": ">= 1.1.x"
+    },
+    "main": "./index",
+    "bin": {
+        "hubot": "./bin/hubot"
+    }
 }
