Moving script to external repo `pjaspers/hubot-angry`

--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
         "hubot-plusplus": "1.0.x",
         "hubot-worldcup": ">= 0.0.0",
         "hubot-soon": ">= 1.0.0",
-        "hubot-business-cat": "1.0.x"
+        "hubot-business-cat": "1.0.x",
+        "hubot-angry": "pjaspers/hubot-angry"
     },
     "engines": {
         "node": ">= 0.8.x",
