--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "url": "0.7.9",
         "time": "*",
         "cron": "*",
+        "soupselect": "0.2.0",
         "hubot-kato": "0.0.6",
         "ntwitter": "0.5.0",
         "hubot-plusplus": "1.0.x",
