Adding new external scripts
- Fliptable: flips the table

`'(╯°□°）╯︵ ┻━┻',`

- ambush: leave messages for other people

```
user1> hubot ambush user2: Ohai! You forgot your card at lunch!
Hubot> Ambush Prepared
user2> That was a great lunch!
Hubot> user2: while you were out, user1 said: Ohai! You forgot your card
at lunch!
```

- shipping-forecast: Gives shipping information when it hears 'ship it'

```
<bfirsh> ship it
<hubot> Shannon. East or northeast 4 or 5, increasing 6 at
times. Moderate, occasionally rough later in west. Occasional thundery
rain. Moderate or good, occasionally poor
```

- qr: Easy way to get a QR from an URL

`hubot qr me http://10to.be`

- thesimpsons: Gets quotes and images from the simpsons

```
user1>> hubot simpsons image me
hubot>> http://i.imgur.com/mKzawbN.png
user1>> hubot simpsons quote me
hubot>> "Good thing I drink plenty of… malk?"
```

--- a/package.json
+++ b/package.json
@@ -44,7 +44,12 @@
         "hubot-reaction": ">= 0.0.6",
         "hubot-euphemism": ">= 1.0.1",
         "hubot-bobsisms": "pjaspers/hubot-bobsisms",
-        "hubot-motivate": ">= 0.0.0"
+        "hubot-motivate": ">= 0.0.0",
+        "hubot-fliptable": "1.2.0",
+        "hubot-ambush": "0.0.2",
+        "hubot-shipping-forecast": "1.0.0",
+        "hubot-qr": "0.0.2",
+        "hubot-thesimpsons": "1.1.2"
     },
     "engines": {
         "node": ">= 0.8.x",
