--- a/package.json
+++ b/package.json
@@ -5,6 +5,19 @@
   "author": "marleen@10to1.be",
   "description": "A simple helpful robot for your Company",
   "dependencies": {
+    "hubot-plusplus": "1.1.3",
+    "hubot-worldcup": "0.4.5",
+    "hubot-soon": "1.0.0",
+    "hubot-business-cat":" 1.1.12",
+    "hubot-angry": "pjaspers/hubot-angry",
+    "hubot-bobsisms": "pjaspers/hubot-bobsisms",
+    "hubot-motivate": ">= 0.0.0",
+    "hubot-fliptable": "1.2.0",
+    "hubot-ambush": "0.0.2",
+    "hubot-shipping-forecast": "1.0.0",
+    "hubot-qr": "0.0.2",
+    "hubot-thesimpsons": "1.1.2",
+    "hubot-reaction": "0.0.6",
     "hubot": "^2.11.1",
     "hubot-diagnostics": "0.0.1",
     "hubot-google-images": "^0.1.3",
