--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
         "hubot-thesimpsons": "1.1.2"
     },
     "engines": {
-        "node": ">= 0.8.x",
+        "node": "0.10.x",
         "npm": ">= 1.1.x"
     },
     "main": "./index",
