--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "hubot-rules": "^0.1.0",
     "hubot-scripts": "^2.5.16",
     "hubot-shipit": "^0.1.2",
-    "hubot-youtube": "^0.1.2"
+    "hubot-youtube": "^0.1.2",
+    "hubot-github-identity": "^0.9.1",
+    "hubot-github-issues": "^0.1.1"
   },
   "engines": {
     "node": "0.10.x"
