--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "hubot-business-cat":" 1.1.12",
     "hubot-angry": "pjaspers/hubot-angry",
     "hubot-bobsisms": "pjaspers/hubot-bobsisms",
+    "hubot-checkle": "pjaspers/hubot-freckle",
     "hubot-motivate": ">= 0.0.0",
     "hubot-fliptable": "1.2.0",
     "hubot-ambush": "0.0.2",
