--- a/package.json
+++ b/package.json
@@ -5,37 +5,38 @@
   "author": "marleen@10to1.be",
   "description": "A simple helpful robot for your Company",
   "dependencies": {
-    "hubot-plusplus": "1.1.3",
-    "hubot-worldcup": "0.4.5",
-    "hubot-soon": "1.0.0",
-    "hubot-business-cat":" 1.1.12",
+    "hubot": "^2.11.1",
+    "hubot-ambush": "0.0.2",
     "hubot-angry": "pjaspers/hubot-angry",
     "hubot-bobsisms": "pjaspers/hubot-bobsisms",
+    "hubot-business-cat": " 1.1.12",
     "hubot-checkle": "pjaspers/hubot-freckle",
-    "hubot-motivate": ">= 0.0.0",
-    "hubot-fliptable": "1.2.0",
-    "hubot-ambush": "0.0.2",
-    "hubot-shipping-forecast": "1.0.0",
-    "hubot-qr": "0.0.2",
-    "hubot-thesimpsons": "1.1.2",
-    "hubot-reaction": "0.0.6",
-    "hubot": "^2.11.1",
     "hubot-diagnostics": "0.0.1",
+    "hubot-fliptable": "1.2.0",
+    "hubot-github-identity": "^0.9.1",
+    "hubot-github-issues": "^0.1.1",
     "hubot-google-images": "^0.1.3",
     "hubot-google-translate": "^0.1.0",
     "hubot-help": "^0.1.1",
     "hubot-heroku-keepalive": "0.0.4",
     "hubot-irc": "^0.2.7",
     "hubot-maps": "0.0.1",
+    "hubot-memegen": "^0.2.0",
+    "hubot-motivate": ">= 0.0.0",
+    "hubot-plusplus": "1.1.3",
     "hubot-pugme": "^0.1.0",
+    "hubot-qr": "0.0.2",
+    "hubot-reaction": "0.0.6",
     "hubot-redis-brain": "0.0.2",
     "hubot-rules": "^0.1.0",
     "hubot-scripts": "^2.5.16",
     "hubot-shipit": "^0.1.2",
-    "hubot-youtube": "^0.1.2",
-    "hubot-memegen": "^0.2.0",
-    "hubot-github-identity": "^0.9.1",
-    "hubot-github-issues": "^0.1.1"
+    "hubot-shipping-forecast": "1.0.0",
+    "hubot-slack-attachment": "^1.0.1",
+    "hubot-soon": "1.0.0",
+    "hubot-thesimpsons": "1.1.2",
+    "hubot-worldcup": "0.4.5",
+    "hubot-youtube": "^0.1.2"
   },
   "engines": {
     "node": "0.10.x"
