--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "hubot-scripts": "^2.5.16",
     "hubot-shipit": "^0.1.2",
     "hubot-shipping-forecast": "1.0.0",
+    "hubot-slack": "^3.3.0",
     "hubot-slack-attachment": "^1.0.1",
     "hubot-soon": "1.0.0",
     "hubot-thesimpsons": "1.1.2",
