It's pronounced checkle.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "hubot-angry": "pjaspers/hubot-angry",
     "hubot-bobsisms": "pjaspers/hubot-bobsisms",
     "hubot-business-cat": " 1.1.12",
-    "hubot-checkle": "pjaspers/hubot-freckle",
+    "hubot-checkle": "pjaspers/hubot-checkle",
     "hubot-diagnostics": "0.0.1",
     "hubot-fliptable": "1.2.0",
     "hubot-github-identity": "^0.9.1",
