--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "hubot-ambush": "0.0.2",
     "hubot-angry": "pjaspers/hubot-angry",
     "hubot-bobsisms": "pjaspers/hubot-bobsisms",
+    "hubot-mealz": "reprazent/hubot-mealz",
     "hubot-business-cat": " 1.1.12",
     "hubot-checkle": "pjaspers/hubot-checkle",
     "hubot-diagnostics": "0.0.1",
