--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "hubot-ambush": "0.0.2",
     "hubot-angry": "pjaspers/hubot-angry",
     "hubot-bobsisms": "pjaspers/hubot-bobsisms",
-    "hubot-mealz": "reprazent/hubot-mealz",
     "hubot-business-cat": " 1.1.12",
     "hubot-checkle": "pjaspers/hubot-checkle",
+    "hubot-darts": "^1.0.1",
     "hubot-diagnostics": "0.0.1",
+    "hubot-explainshell": "^1.1.0",
     "hubot-fliptable": "1.2.0",
     "hubot-github-identity": "^0.9.1",
     "hubot-github-issues": "^0.1.1",
@@ -22,6 +23,7 @@
     "hubot-heroku-keepalive": "0.0.4",
     "hubot-irc": "^0.2.7",
     "hubot-maps": "0.0.1",
+    "hubot-mealz": "reprazent/hubot-mealz",
     "hubot-memegen": "^0.2.0",
     "hubot-motivate": ">= 0.0.0",
     "hubot-plusplus": "1.1.3",
@@ -36,6 +38,7 @@
     "hubot-slack": "^3.3.0",
     "hubot-slack-attachment": "^1.0.1",
     "hubot-soon": "1.0.0",
+    "hubot-thank-you": "0.0.3",
     "hubot-thesimpsons": "1.1.2",
     "hubot-worldcup": "0.4.5",
     "hubot-youtube": "^0.1.2"
