--- a/package.json
+++ b/package.json
@@ -40,8 +40,7 @@
     "hubot-soon": "1.0.0",
     "hubot-thank-you": "0.0.3",
     "hubot-thesimpsons": "1.1.2",
-    "hubot-worldcup": "0.4.5",
-    "hubot-youtube": "^0.1.2"
+    "hubot-worldcup": "0.4.5"
   },
   "engines": {
     "node": "0.10.x"
