--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "hubot-angry": "pjaspers/hubot-angry",
     "hubot-bobsisms": "pjaspers/hubot-bobsisms",
     "hubot-business-cat": " 1.1.12",
-    "hubot-harvey": "pjaspers/hubot-harvey",
+    "hubot-harvey": "pjaspers/hubot-harvey#master",
     "hubot-darts": "^1.0.1",
     "hubot-diagnostics": "0.0.1",
     "hubot-explainshell": "^1.1.0",
